# clproc

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.rst  changelog.in  fabfile.py  meta.yaml  pyproject.toml  release.yaml  sonar-project.properties  sonar-pylintrc  vulture-whitelist.py
.devcontainer/: devcontainer.json  init.bash
.github/workflows/: pythonpackage.yml
doc/: background.rst  conf.py  file_metadata.rst  index.rst  input_formats.rst  log_vs_releases.rst  release_files.rst  renderers.rst  usage.rst
src/clproc/: cli.py  core.py  discovery.py  model.py
src/clproc/parser/: __init__.py  core.py  v1.py  v2.py
src/clproc/renderer/: base.py  changelog_template.py  json.py  markdown.py
tests/: conftest.py  test_core.py  test_discovery.py  test_parser.py  test_textprocessing.py
tests/data/: changelog.in
tests/parser/: test_v1.py  test_v2.py
tests/renderer/: test_base.py  test_json.py  test_markdown.py  test_template.py
tests/renderer/data/: changelog.in
